--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     </div>
     
     <div class="page6">
-      <h1>Digital Product Design Process</h1>
+      <h1>Digital Product <br> Design Process</h1>
       <div class="page6-content">
         <div class="blue-btn">
           <h4>See All Case Studies <i class="ri-arrow-right-up-line"></i></h4>
